Rename ng-controller, ng-repeat

--- a/partials/sf-public-art.html
+++ b/partials/sf-public-art.html
@@ -1,4 +1,4 @@
-<div ng-controller="jsonDataCtrl" ng-repeat="artwork in jsonData">
+<div ng-controller="artJsonDataCtrl" ng-repeat="artwork in jsonData.art">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-3">{{ artwork.artist }}</div>
